Replace CSS Grid with FlexBox; fix layout issues on mobile
Flexbox > CSS Grid IN THIS SITUATION, because there's really no grid available. It's just columns (and a footer row, depending on width).

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -18,36 +18,6 @@ img {
 }
 
 body {
-	display: grid;
-	grid-template-areas: "banner banner banner" "menu-bar menu-bar menu-bar" ". main ." "footer footer footer";
-	grid-template-columns: 1fr min(960px, 2fr), 1fr;
-}
-
-body>header {
 	display: flex;
 	flex-direction: column;
-	grid-area: banner;
-	text-align: center;
-}
-
-body>nav {
-	grid-area: menu-bar;
-}
-
-body>main {
-	grid-area: main;
-}
-
-body>footer {
-	grid-area: footer;
-}
-
-@media (max-width: 720px) {
-	body>header {
-		padding: 0 !important;
-	}
-	body {
-		grid-template-columns: 1fr;
-		grid-template-areas: "banner banner banner" "menu-bar menu-bar menu-bar" "main main main" "footer footer footer";
-	}
 }
