--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 body>main {
 	/* text-align: center; */
-	padding: 10px 10vw 10px 10vw;
-	margin: 0 100px 0 100px;
+	padding: 3vw;
+	margin: 0 0 0 0;
 }
 
 body>main * {
@@ -161,4 +161,16 @@ a.self-link:hover {
 
 h1>a.self-link::before, h2>a.self-link::before, h3>a.self-link::before, h4>a.self-link::before, h5>a.self-link::before, h6>a.self-link::before {
 	content: "§";
+}
+
+@media (min-width: 720px) {
+	body>main {
+		margin: 0 10% 0 10%;
+	}
+}
+
+@media (min-width: 1200px) {
+	body>main {
+		margin: 0 20% 0 20%;
+	}
 }
